# cw_6

./: .env.sample  .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: fill.py  mailing.py
mailing/migrations/: 0001_initial.py  0002_remove_client_mailings_mailing_client_list.py  0003_alter_mailing_client_list_and_more.py  0004_remove_mailing_date_of_first_dispatch.py  0005_remove_mailing_datetime_to_start_and_more.py  0006_remove_attempt_date_first_attempt_and_more.py  0007_client_owner_mailing_owner_message_owner.py  0008_attempt_owner.py  0009_alter_mailing_options.py  0010_alter_mailing_options_mailing_is_published.py
mailing/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py  0003_alter_user_is_active.py
