[tool.poetry]
name = "cw-6"
version = "0.0.1"
description = ""
authors = ["Roman Feoktistov <romafeoktistov942@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.3"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
pytz = "^2024.2"
apscheduler = "^3.10.4"
pillow = "^11.0.0"
django-apscheduler = "^0.7.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
